# py3r_behaviour

./: .gitignore  404.html  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  objects.inv  pyproject.toml  versions.json
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  docs-on-release.yml  pr-labeler.yml  release-drafter.yml  release.yml
api/features/: index.html
api/features_collection/: index.html
api/summary/: index.html
api/summary_collection/: index.html
api/tracking/: index.html
api/tracking_collection/: index.html
api/tracking_mv/: index.html
docs/: getting_started.md  index.md  install.md
docs/api/: features.md  features_collection.md  summary.md  summary_collection.md  tracking.md  tracking_collection.md  tracking_mv.md
docs/developer/: developer.md
docs/examples/: epm_pipeline.md  grimace_pipeline_behaviourflow.md  oft_bfa_pipeline.md  oft_pipeline.md
scripts/: release.sh
search/: search_index.json
site/: index.html  objects.inv
tools/: build_mkdocs.sh  build_pydoc.sh  gen_batch_mixins.py
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.0/css/: extra.css
v2.0.4/: 404.html  index.html  sitemap.xml
v2.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.1.1/: 404.html  index.html  sitemap.xml
v2.1.2/: 404.html  index.html  sitemap.xml
v2.1.3/: 404.html  index.html  sitemap.xml
v2.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.4.0/: 404.html  index.html  objects.inv  sitemap.xml
(+182 files in other folders)
