[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py3r-behaviour"
version = "1.3.2"
description = "Behaviour analysis tools for the py3r namespace package"
authors = [{ name = "Tom Lorimer" }]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "shapely",
    "opencv-python"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["py3r.*"] 