[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py3r-behaviour"
version = "2.4.0"
description = "Behaviour analysis tools for the py3r namespace package"
authors = [{ name = "Tom Lorimer" }]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "scikit-image",
    "shapely",
    "opencv-python",
    "pyarrow"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["py3r.*"] 

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["src", "tests"]
doctest_optionflags = ["ELLIPSIS", "IGNORE_EXCEPTION_DETAIL", "NORMALIZE_WHITESPACE"]
filterwarnings = ["ignore::UserWarning"]